# House24

./: .gitignore  manage.py  pyproject.toml  requirements.txt
House24/: asgi.py  settings.py  urls.py  wsgi.py
src/accounts/: apps.py  authentication.py  forms.py  urls.py  views.py
src/accounts/templates/: login.html  password_reset.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_email.html
src/admin_panel/: admin.py  apps.py  tasks.py  urls.py  utilities.py
src/admin_panel/forms/: accounts.py  application.py  clients.py  house.py  indications.py  mail.py  paybox.py  personal.py  personal_account.py  receipts.py  system_settings.py  website.py
src/admin_panel/migrations/: 0001_initial.py  0002_alter_customuser_phone.py  0003_alter_contacts_phone_alter_service_measure.py
src/admin_panel/models/: __init__.py  accounts.py  buildings.py  business.py  website.py
src/admin_panel/templates/: base.html  second_base.html  third_base.html
src/admin_panel/templatetags/: check_email.py  check_flat.py  check_personal_account.py  check_relation.py
src/admin_panel/views/: application.py  clients.py  flat.py  house.py  indications.py  mail.py  other.py  paybox.py  personal.py  personal_account.py  receipts.py  statistic.py  system_settings.py  website.py
src/cabinet/: apps.py  middlewares.py  views.py
src/website/: apps.py
static/admin_panel/application/: application.css  application.js
static/admin_panel/house/: flat.js  flat_detail.js  flats.js  (+1 more)
static/docs/: 404.html
static/flatpickr/: package.json
(+100 files in other folders)
